Ajuste: ajuste de diseño, cambio de nombres e íconos a funcionalidades

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -11,27 +11,27 @@
       </p-header>
       <div id="buttons">
         <button class="esri-button button1"
-          style="background-color: #F8C933; border-color: #F8C933; border-radius: 4px;" title="Ver todo"
+          style="background-color: #ffe73c; border-color: #ffe73c; border-radius: 4px;" title="Ver todo"
           (click)="viewAll()">
           <i class="icofont-world" align="center"></i>
         </button>
         <button class="esri-button button2"
-          style="background-color: #E18230; border-color: #E18230; border-radius: 4px;" title="Herramientas de Medición"
+          style="background-color: #fbd129; border-color: #fbd129; border-radius: 4px;" title="Herramientas de Medición"
           (click)="openMeasuringTools()">
           <i class="icofont-ruler-compass" align="center"></i>
         </button>
         <button class="esri-button button3"
-          style="background-color: #D75C31; border-color: #D75C31; border-radius: 4px;" title="Seleccionar"
+          style="background-color: #ec8c22; border-color: #ec8c22; border-radius: 4px;" title="Seleccionar"
           (click)="openSelectionTool()">
           <i class="icofont-hand-drag1" align="center"></i>
         </button>
         <button class="esri-button button4"
-          style="background-color: #CC3D36; border-color: #CC3D36; border-radius: 4px;" title="Identificar"
+          style="background-color: #e36222; border-color: #e36222; border-radius: 4px;" title="Identificar"
           (click)="openEnabledPopup()">
           <i class="esri-icon-description" align="center"></i>
         </button>
         <button class="esri-button button5"
-          style="background-color: #44546A; border-color: #44546A; border-radius: 4px;" title="Descargar capa"
+          style="background-color: #d73a2c; border-color: #d73a2c; border-radius: 4px;" title="Descargar capa"
           (click)="openExtract()">
           <i class="esri-icon-download" align="center"></i>
         </button>
