--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -557,7 +557,7 @@ p-sidebar {
 ::ng-deep .icofont-tools-alt-2,
 ::ng-deep .icofont-download-alt,
 ::ng-deep .icofont-printer,
-::ng-deep .icofont-upload {
+::ng-deep .esri-icon-upload {
   font-size: 22px !important;
 }
 
