--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -67,8 +67,11 @@
 <!-- Fin del div contenedor del mapa -->
 
 <!-- Modal de extracción de datos -->
-<p-dialog header="Extracción de datos" [(visible)]="modalExtract" [resizable]="false" (onHide)="onHideDialogExtract()"
+<p-dialog [(visible)]="modalExtract" [resizable]="false" (onHide)="onHideDialogExtract()"
   [focusOnShow]="false" [style]="{'width': '390px'}">
+  <p-header>
+    {{headerExtract}}
+  </p-header>
   <div id="infoDiv" *ngIf="modalExtract">
     <button pButton class="ui-button-rounded ui-button-secondary" title="Ayuda" style="color: #007ad8; float: right;"
       (click)="requestHelp('h-extraer')" icon="pi pi-question"></button>
@@ -90,7 +93,6 @@
     <p-button label="Extraer" icon="pi pi-download" (onClick)="extractShape()" [style]="{'margin-top': '5px'}">
     </p-button>
   </div>
-  <br>
   <p-message [escape]="false" id="infoMedicion" *ngIf="!layerExtract && infoTool" severity="info"
     text="Proceda con los poligonos ya <b>seleccionados en la capa actual</b>. Si no<br> hay una selección en la capa actual debe usar las <b>Herramientas de</b><br><b>Selección.</b><br><b>Seleccione las capas</b> que se incluirán en la extracción">
   </p-message>
