Ajuste: se realiza ajuste a componente de Tabla de atributos

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -67,8 +67,8 @@
 <!-- Fin del div contenedor del mapa -->
 
 <!-- Modal de extracción de datos -->
-<p-dialog [(visible)]="modalExtract" [resizable]="false" (onHide)="onHideDialogExtract()"
-  [focusOnShow]="false" [style]="{'width': '390px'}">
+<p-dialog [(visible)]="modalExtract" [resizable]="false" (onHide)="onHideDialogExtract()" [focusOnShow]="false"
+  [style]="{'width': '390px'}">
   <p-header>
     {{headerExtract}}
   </p-header>
@@ -209,14 +209,14 @@
 <!-- Modal de tabla de atributos -->
 <p-dialog id="attr-table" [(visible)]="modalTable" [resizable]="false" [draggable]="false"
   (onHide)="onHideDialogAtributos()" styleClass="{{styleClassAttrTable}}" position="bottomright" [focusOnShow]="false">
+  <p-header>
+    <span>Tabla de Atributos</span>
+    <i class="pi pi-window-minimize" style="margin-left: 635px; padding-top: 2px; cursor: pointer;"
+      (click)="minimizeMaximizeAttrTable(false)" *ngIf="minimizeMaximize" title="Minimizar"></i>
+    <i class="pi pi-window-maximize" style="margin-left: 73px; padding-top: 2px; cursor: pointer;"
+      (click)="minimizeMaximizeAttrTable(true)" *ngIf="!minimizeMaximize" title="Maximizar"></i>
+  </p-header>
   <div *ngIf="modalTable">
-    <p-header>
-      <span>Tabla de Atributos</span>
-      <i class="pi pi-window-minimize" style="margin-left: 615px; padding-top: 2px; cursor: pointer;"
-        (click)="minimizeMaximizeAttrTable(false)" *ngIf="minimizeMaximize" title="Minimizar"></i>
-      <i class="pi pi-window-maximize" style="margin-left: 53px; padding-top: 2px; cursor: pointer;"
-        (click)="minimizeMaximizeAttrTable(true)" *ngIf="!minimizeMaximize" title="Maximizar"></i>
-    </p-header>
     <p-table class="esri-widget__table" [style]="{'width': 'inherit', 'height': 'inherit', 'max-height': '380px'}"
       [paginator]="true" [rows]="100" [rowsPerPageOptions]="[100,200,500]" selectionMode="multiple" #dt
       [columns]="columnsTable" *ngIf="modalTable && minimizeMaximize" [dataKey]="dataKey()" [value]="featureDptos"
