Ajuste: visibilidad de header en tabla de atributos

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -208,7 +208,7 @@
 
 <!-- Modal de tabla de atributos -->
 <p-dialog id="attr-table" [(visible)]="modalTable" [resizable]="false" [draggable]="false" [closable]="false"
-  styleClass="{{styleClassAttrTable}}" position="bottomright" [focusOnShow]="false" [showHeader]="false">
+  styleClass="{{styleClassAttrTable}}" position="bottomright" [focusOnShow]="false" [showHeader]="true">
   <p-header>
     <span>Tabla de Atributos</span>
     <i class="pi pi-window-minimize" style="margin-left: 635px; padding-top: 2px; cursor: pointer;"
