Ajuste: ajustes varios

--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -35,7 +35,7 @@
   height: 40px;
   background-color: white;
   padding: 10px;
-  font-size: large;
+  font-size: 13px;
   font-family: "Avenir Next W00", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
