--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -227,14 +227,14 @@
       <ng-template pTemplate="colgroup" let-columns>
         <colgroup>
           <col style="width: 28px !important;">
-          <col style="width: 28px !important;">
+          <col style="width: 28px !important;" *ngIf="supportsAttachment">
           <col *ngFor="let col of columns" style="width:150px">
         </colgroup>
       </ng-template>
       <ng-template pTemplate="header" let-columns>
         <tr>
           <th></th>
-          <th></th>
+          <th *ngIf="supportsAttachment"></th>
           <th *ngFor="let col of columns" pResizableColumn [pSortableColumn]="keySort(col.name)">
             {{col.alias}}
             <p-sortIcon [field]="keySort(col.name)"></p-sortIcon>
@@ -242,7 +242,7 @@
         </tr>
         <tr>
           <th></th>
-          <th></th>
+          <th *ngIf="supportsAttachment"></th>
           <th *ngFor="let col of columns; let i = index">
             <span style="display: grid; grid-template-columns: 20% 80%;" class="filter">
               <select name="select" *ngIf="view.ready" class="esri-select" [(ngModel)]="filter[i]">
@@ -274,7 +274,7 @@
               <i class="esri-icon-zoom-in-magnifying-glass"></i>
             </button>
           </td>
-          <td style="padding: 0px; width: 28px !important;">
+          <td style="padding: 0px; width: 28px !important;" title="Archivos" *ngIf="supportsAttachment">
             <button class="esri-button" (click)="downloadAttachment(item)">
               <i class="esri-icon-documentation"></i>
             </button>
