--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -510,7 +510,8 @@
       <br>que desea ubicar.
       <br>Al ingresar Longitud y Latitud se deben <b>llenar todos los espacios
         <br>subrayados</b> con dígitos entre 0 y 9. Para grados de un sólo dígito
-        <br>use un espacio o cero al inicio. Todo lo anterior no aplica para X e Y.">
+        <br>use un espacio o cero al inicio. Todo lo anterior no aplica para X e Y.
+        <br>Para X e Y utilice la coma como separador decimal.">
 
     </p-message>
   </div>
