Ajuste: cambio en límite de ingreso a coordenadas planas

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -511,7 +511,8 @@
       <br>Al ingresar Longitud y Latitud se deben <b>llenar todos los espacios
         <br>subrayados</b> con dígitos entre 0 y 9. Para grados de un sólo dígito
         <br>use un espacio o cero al inicio. Todo lo anterior no aplica para X e Y.
-        <br>Para X e Y utilice la coma como separador decimal.">
+        <br>Para X e Y utilice la coma como separador decimal.
+        <br>Máximo valor para X e Y de 1.999.999,9999">
 
     </p-message>
   </div>
