Ajuste: Funcionalidad de identificar reconstruida correctamente

--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -273,6 +273,10 @@ p-sidebar {
   cursor: default !important;
 }
 
+::ng-deep .wait-cursor {
+  cursor: wait !important;
+}
+
 .loading-machin {
   position: fixed;
   top: 50%;
